--- a/css/detailProduct.css
+++ b/css/detailProduct.css
@@ -8,6 +8,7 @@ body a {
     text-decoration: none;
 }
 
+/* Style header */
 .navbar {
     background-color: rgba(16, 60, 172, 1);
 }
@@ -27,10 +28,32 @@ body a {
     height: 20px;
     margin: auto 5px;
 }
+/* Responsive image */
+@media (max-width: 992px) {
+    .pictureCollection {
+        overflow-x: auto;
+        padding: 10px 0;
+    }
+
+    .pictureCollection img {
+        flex: 0 0 auto;
+        width: 100px;
+        margin-right: 10px;
+    }
+}
+
+.pictureCollection {
+    cursor: pointer;
+}
+
+.mainPicture img {
+    width: 100%;
+}
+
+/* Style productPresentation */
 .txtPrice {
     color: rgba(16, 60, 172, 1);
 }
-
 
 .quickSpecs td {
     padding-left: 4%;
